--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "@types/chai": "^4.3.12",
     "@types/chalk": "^2.2.0",
+    "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.6",
+    "@types/request": "^2.48.12",
     "@types/sinon": "^17.0.3",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -35,6 +37,8 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "express": "^4.19.2",
+    "request": "^2.88.2",
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1"
   }
